FIxed bug of cropper movement and added download recording coordinates feature

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -57,6 +57,10 @@
   background-color: #37393f;
 }
 
+.buttons .active {
+  background-color: #37393f;
+}
+
 .footer {
   display: flex;
   justify-content: space-between;
